[package]
authors = ["omnect@conplement.de>"]
edition = "2021"
name = "azure-iot-sdk"
repository = "git@github.com:omnect/azure-iot-sdk.git"
version = "0.12.1"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
azure-iot-sdk-sys = { git = "https://github.com/omnect/azure-iot-sdk-sys.git", tag = "0.6.0", default-features = false }
eis-utils = { git = "https://github.com/omnect/eis-utils.git", tag = "0.3.2", optional = true }
futures = "0.3"
log = "0.4"
serde_json = "1.0"
tokio = { version = "1", features = ["rt", "sync", "time"] }
url = "2.4"

[dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
azure-iot-sdk = { path = ".", features = ["module_client"] }

[features]
# select either "module_client", "edge_client" or "device_client" functionality
default = []
device_client = []
module_client = ["eis-utils"]
edge_client = ["azure-iot-sdk-sys/edge_modules"]
